sql_parser.output
Nonterminals useless in grammar

    update_value_list
    literal_value
    having_clause


Terminals unused in grammar

    ALTER
    ORDER
    BY
    GROUP
    HAVING
    LIMIT
    OFFSET
    USING
    ALL
    IN
    EXISTS
    BETWEEN
    LIKE
    IS
    UNION
    INTERSECT
    EXCEPT
    FOREIGN
    REFERENCES
    CHECK
    DEFAULT
    UNKNOWN_TOKEN


Rules useless in grammar

  101 having_clause: HAVING condition
  102              | ε


State 55 conflicts: 1 reduce/reduce
State 72 conflicts: 1 reduce/reduce
State 134 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: statement_list

    2 statement_list: statement_list statement SEMICOLON
    3               | statement SEMICOLON

    4 statement: select_statement
    5          | insert_statement
    6          | update_statement
    7          | delete_statement
    8          | create_table_statement
    9          | drop_table_statement

   10 select_statement: SELECT select_column_list from_clause where_clause
   11                 | SELECT select_column_list from_clause
   12                 | SELECT DISTINCT select_column_list from_clause where_clause
   13                 | SELECT DISTINCT select_column_list from_clause

   14 select_column_list: MULTIPLY
   15                   | column_list

   16 column_list: column_list COMMA expression
   17            | expression

   18 from_clause: FROM table_reference join_clause_list
   19            | FROM table_reference

   20 table_reference: IDENTIFIER
   21                | IDENTIFIER AS IDENTIFIER
   22                | IDENTIFIER IDENTIFIER

   23 join_clause_list: join_clause_list join_clause
   24                 | join_clause

   25 join_clause: join_type JOIN table_reference ON condition
   26            | JOIN table_reference ON condition

   27 join_type: INNER
   28          | LEFT
   29          | RIGHT
   30          | LEFT OUTER
   31          | RIGHT OUTER

   32 where_clause: WHERE condition
   33             | ε

   34 insert_statement: INSERT INTO IDENTIFIER LPAREN column_list RPAREN VALUES LPAREN value_list RPAREN
   35                 | INSERT INTO IDENTIFIER VALUES LPAREN value_list RPAREN

   36 value_list: value_list COMMA expression
   37           | expression

   38 update_statement: UPDATE IDENTIFIER SET update_column_list where_clause

   39 update_column_list: update_column_list COMMA IDENTIFIER EQUAL expression
   40                   | IDENTIFIER EQUAL expression

   41 delete_statement: DELETE FROM IDENTIFIER where_clause

   42 create_table_statement: CREATE TABLE IDENTIFIER LPAREN column_definition_list RPAREN

   43 column_definition_list: column_definition_list COMMA column_definition
   44                       | column_definition

   45 column_definition: IDENTIFIER data_type
   46                  | IDENTIFIER data_type LPAREN INTEGER_LITERAL RPAREN
   47                  | IDENTIFIER data_type PRIMARY KEY
   48                  | IDENTIFIER data_type NOT NULL_TOK
   49                  | IDENTIFIER data_type UNIQUE
   50                  | IDENTIFIER data_type AUTO_INCREMENT

   51 data_type: INT_TYPE
   52          | INTEGER_TYPE
   53          | VARCHAR_TYPE
   54          | CHAR_TYPE
   55          | TEXT_TYPE
   56          | DECIMAL_TYPE
   57          | NUMERIC_TYPE
   58          | FLOAT_TYPE
   59          | REAL_TYPE
   60          | DATE_TYPE
   61          | TIME_TYPE
   62          | TIMESTAMP_TYPE
   63          | BOOLEAN_TYPE

   64 drop_table_statement: DROP TABLE IDENTIFIER

   65 expression: literal
   66           | column_reference
   67           | function_call
   68           | expression PLUS expression
   69           | expression MINUS expression
   70           | expression MULTIPLY expression
   71           | expression DIVIDE expression
   72           | expression MODULO expression
   73           | LPAREN expression RPAREN

   74 condition: expression EQUAL expression
   75          | expression NOT_EQUAL expression
   76          | expression LESS_THAN expression
   77          | expression GREATER_THAN expression
   78          | expression LESS_EQUAL expression
   79          | expression GREATER_EQUAL expression
   80          | condition AND condition
   81          | condition OR condition
   82          | NOT condition
   83          | LPAREN condition RPAREN
   84          | expression

   85 literal: INTEGER_LITERAL
   86        | DECIMAL_LITERAL
   87        | STRING_LITERAL
   88        | NULL_TOK
   89        | TRUE_TOK
   90        | FALSE_TOK

   91 column_reference: IDENTIFIER
   92                 | IDENTIFIER DOT IDENTIFIER

   93 function_call: IDENTIFIER LPAREN RPAREN
   94              | IDENTIFIER LPAREN value_list RPAREN
   95              | COUNT LPAREN MULTIPLY RPAREN
   96              | COUNT LPAREN expression RPAREN
   97              | SUM LPAREN expression RPAREN
   98              | AVG LPAREN expression RPAREN
   99              | MIN LPAREN expression RPAREN
  100              | MAX LPAREN expression RPAREN


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    IDENTIFIER <string_val> (258) 20 21 22 34 35 38 39 40 41 42 45 46 47 48 49 50 64 91 92 93 94
    STRING_LITERAL <string_val> (259) 87
    INTEGER_LITERAL <int_val> (260) 46 85
    DECIMAL_LITERAL <float_val> (261) 86
    SELECT (262) 10 11 12 13
    FROM (263) 18 19 41
    WHERE (264) 32
    INSERT (265) 34 35
    INTO (266) 34 35
    VALUES (267) 34 35
    UPDATE (268) 38
    SET (269) 38
    DELETE (270) 41
    CREATE (271) 42
    TABLE (272) 42 64
    DROP (273) 64
    ALTER (274)
    AND (275) 80
    OR (276) 81
    NOT (277) 48 82
    NULL_TOK (278) 48 88
    TRUE_TOK (279) 89
    FALSE_TOK (280) 90
    AS (281) 21
    ORDER (282)
    BY (283)
    GROUP (284)
    HAVING (285)
    LIMIT (286)
    OFFSET (287)
    JOIN (288) 25 26
    INNER (289) 27
    LEFT (290) 28 30
    RIGHT (291) 29 31
    OUTER (292) 30 31
    ON (293) 25 26
    USING (294)
    DISTINCT (295) 12 13
    ALL (296)
    IN (297)
    EXISTS (298)
    BETWEEN (299)
    LIKE (300)
    IS (301)
    UNION (302)
    INTERSECT (303)
    EXCEPT (304)
    INT_TYPE (305) 51
    INTEGER_TYPE (306) 52
    VARCHAR_TYPE (307) 53
    CHAR_TYPE (308) 54
    TEXT_TYPE (309) 55
    DECIMAL_TYPE (310) 56
    NUMERIC_TYPE (311) 57
    FLOAT_TYPE (312) 58
    REAL_TYPE (313) 59
    DATE_TYPE (314) 60
    TIME_TYPE (315) 61
    TIMESTAMP_TYPE (316) 62
    BOOLEAN_TYPE (317) 63
    PRIMARY (318) 47
    KEY (319) 47
    FOREIGN (320)
    REFERENCES (321)
    UNIQUE (322) 49
    CHECK (323)
    DEFAULT (324)
    AUTO_INCREMENT (325) 50
    EQUAL (326) 39 40 74
    NOT_EQUAL (327) 75
    LESS_THAN (328) 76
    GREATER_THAN (329) 77
    LESS_EQUAL (330) 78
    GREATER_EQUAL (331) 79
    PLUS (332) 68
    MINUS (333) 69
    MULTIPLY (334) 14 70 95
    DIVIDE (335) 71
    MODULO (336) 72
    LPAREN (337) 34 35 42 46 73 83 93 94 95 96 97 98 99 100
    RPAREN (338) 34 35 42 46 73 83 93 94 95 96 97 98 99 100
    COMMA (339) 16 36 39 43
    SEMICOLON (340) 2 3
    DOT (341) 92
    COUNT (342) 95 96
    SUM (343) 97
    AVG (344) 98
    MIN (345) 99
    MAX (346) 100
    UNKNOWN_TOKEN (347)


Nonterminals, with rules where they appear

    $accept (93)
        on left: 0
    program (94)
        on left: 1
        on right: 0
    statement_list (95)
        on left: 2 3
        on right: 1 2
    statement <ast_node> (96)
        on left: 4 5 6 7 8 9
        on right: 2 3
    select_statement <ast_node> (97)
        on left: 10 11 12 13
        on right: 4
    select_column_list <column_list> (98)
        on left: 14 15
        on right: 10 11 12 13
    column_list <column_list> (99)
        on left: 16 17
        on right: 15 16 34
    from_clause <table_ref> (100)
        on left: 18 19
        on right: 10 11 12 13
    table_reference <table_ref> (101)
        on left: 20 21 22
        on right: 18 19 25 26
    join_clause_list <join_clause> (102)
        on left: 23 24
        on right: 18 23
    join_clause <join_clause> (103)
        on left: 25 26
        on right: 23 24
    join_type <join_type> (104)
        on left: 27 28 29 30 31
        on right: 25
    where_clause <expression> (105)
        on left: 32 33
        on right: 10 12 38 41
    insert_statement <ast_node> (106)
        on left: 34 35
        on right: 5
    value_list <value_list> (107)
        on left: 36 37
        on right: 34 35 36 94
    update_statement <ast_node> (108)
        on left: 38
        on right: 6
    update_column_list <column_list> (109)
        on left: 39 40
        on right: 38 39
    delete_statement <ast_node> (110)
        on left: 41
        on right: 7
    create_table_statement <ast_node> (111)
        on left: 42
        on right: 8
    column_definition_list <column_def> (112)
        on left: 43 44
        on right: 42 43
    column_definition <column_def> (113)
        on left: 45 46 47 48 49 50
        on right: 43 44
    data_type <data_type> (114)
        on left: 51 52 53 54 55 56 57 58 59 60 61 62 63
        on right: 45 46 47 48 49 50
    drop_table_statement <ast_node> (115)
        on left: 64
        on right: 9
    expression <expression> (116)
        on left: 65 66 67 68 69 70 71 72 73
        on right: 16 17 36 37 39 40 68 69 70 71 72 73 74 75 76 77 78 79 84 96 97 98 99 100
    condition <expression> (117)
        on left: 74 75 76 77 78 79 80 81 82 83 84
        on right: 25 26 32 80 81 82 83
    literal <expression> (118)
        on left: 85 86 87 88 89 90
        on right: 65
    column_reference <expression> (119)
        on left: 91 92
        on right: 66
    function_call <expression> (120)
        on left: 93 94 95 96 97 98 99 100
        on right: 67


State 0

    0 $accept: • program $end

    SELECT  shift, and go to state 1
    INSERT  shift, and go to state 2
    UPDATE  shift, and go to state 3
    DELETE  shift, and go to state 4
    CREATE  shift, and go to state 5
    DROP    shift, and go to state 6

    program                 go to state 7
    statement_list          go to state 8
    statement               go to state 9
    select_statement        go to state 10
    insert_statement        go to state 11
    update_statement        go to state 12
    delete_statement        go to state 13
    create_table_statement  go to state 14
    drop_table_statement    go to state 15


State 1

   10 select_statement: SELECT • select_column_list from_clause where_clause
   11                 | SELECT • select_column_list from_clause
   12                 | SELECT • DISTINCT select_column_list from_clause where_clause
   13                 | SELECT • DISTINCT select_column_list from_clause

    IDENTIFIER       shift, and go to state 16
    STRING_LITERAL   shift, and go to state 17
    INTEGER_LITERAL  shift, and go to state 18
    DECIMAL_LITERAL  shift, and go to state 19
    NULL_TOK         shift, and go to state 20
    TRUE_TOK         shift, and go to state 21
    FALSE_TOK        shift, and go to state 22
    DISTINCT         shift, and go to state 23
    MULTIPLY         shift, and go to state 24
    LPAREN           shift, and go to state 25
    COUNT            shift, and go to state 26
    SUM              shift, and go to state 27
    AVG              shift, and go to state 28
    MIN              shift, and go to state 29
    MAX              shift, and go to state 30

    select_column_list  go to state 31
    column_list         go to state 32
    expression          go to state 33
    literal             go to state 34
    column_reference    go to state 35
    function_call       go to state 36


State 2

   34 insert_statement: INSERT • INTO IDENTIFIER LPAREN column_list RPAREN VALUES LPAREN value_list RPAREN
   35                 | INSERT • INTO IDENTIFIER VALUES LPAREN value_list RPAREN

    INTO  shift, and go to state 37


State 3

   38 update_statement: UPDATE • IDENTIFIER SET update_column_list where_clause

    IDENTIFIER  shift, and go to state 38


State 4

   41 delete_statement: DELETE • FROM IDENTIFIER where_clause

    FROM  shift, and go to state 39


State 5

   42 create_table_statement: CREATE • TABLE IDENTIFIER LPAREN column_definition_list RPAREN

    TABLE  shift, and go to state 40


State 6

   64 drop_table_statement: DROP • TABLE IDENTIFIER

    TABLE  shift, and go to state 41


State 7

    0 $accept: program • $end

    $end  shift, and go to state 42


State 8

    1 program: statement_list •
    2 statement_list: statement_list • statement SEMICOLON

    SELECT  shift, and go to state 1
    INSERT  shift, and go to state 2
    UPDATE  shift, and go to state 3
    DELETE  shift, and go to state 4
    CREATE  shift, and go to state 5
    DROP    shift, and go to state 6

    $default  reduce using rule 1 (program)

    statement               go to state 43
    select_statement        go to state 10
    insert_statement        go to state 11
    update_statement        go to state 12
    delete_statement        go to state 13
    create_table_statement  go to state 14
    drop_table_statement    go to state 15


State 9

    3 statement_list: statement • SEMICOLON

    SEMICOLON  shift, and go to state 44


State 10

    4 statement: select_statement •

    $default  reduce using rule 4 (statement)


State 11

    5 statement: insert_statement •

    $default  reduce using rule 5 (statement)


State 12

    6 statement: update_statement •

    $default  reduce using rule 6 (statement)


State 13

    7 statement: delete_statement •

    $default  reduce using rule 7 (statement)


State 14

    8 statement: create_table_statement •

    $default  reduce using rule 8 (statement)


State 15

    9 statement: drop_table_statement •

    $default  reduce using rule 9 (statement)


State 16

   91 column_reference: IDENTIFIER •
   92                 | IDENTIFIER • DOT IDENTIFIER
   93 function_call: IDENTIFIER • LPAREN RPAREN
   94              | IDENTIFIER • LPAREN value_list RPAREN

    LPAREN  shift, and go to state 45
    DOT     shift, and go to state 46

    $default  reduce using rule 91 (column_reference)


State 17

   87 literal: STRING_LITERAL •

    $default  reduce using rule 87 (literal)


State 18

   85 literal: INTEGER_LITERAL •

    $default  reduce using rule 85 (literal)


State 19

   86 literal: DECIMAL_LITERAL •

    $default  reduce using rule 86 (literal)


State 20

   88 literal: NULL_TOK •

    $default  reduce using rule 88 (literal)


State 21

   89 literal: TRUE_TOK •

    $default  reduce using rule 89 (literal)


State 22

   90 literal: FALSE_TOK •

    $default  reduce using rule 90 (literal)


State 23

   12 select_statement: SELECT DISTINCT • select_column_list from_clause where_clause
   13                 | SELECT DISTINCT • select_column_list from_clause

    IDENTIFIER       shift, and go to state 16
    STRING_LITERAL   shift, and go to state 17
    INTEGER_LITERAL  shift, and go to state 18
    DECIMAL_LITERAL  shift, and go to state 19
    NULL_TOK         shift, and go to state 20
    TRUE_TOK         shift, and go to state 21
    FALSE_TOK        shift, and go to state 22
    MULTIPLY         shift, and go to state 24
    LPAREN           shift, and go to state 25
    COUNT            shift, and go to state 26
    SUM              shift, and go to state 27
    AVG              shift, and go to state 28
    MIN              shift, and go to state 29
    MAX              shift, and go to state 30

    select_column_list  go to state 47
    column_list         go to state 32
    expression          go to state 33
    literal             go to state 34
    column_reference    go to state 35
    function_call       go to state 36


State 24

   14 select_column_list: MULTIPLY •

    $default  reduce using rule 14 (select_column_list)


State 25

   73 expression: LPAREN • expression RPAREN

    IDENTIFIER       shift, and go to state 16
    STRING_LITERAL   shift, and go to state 17
    INTEGER_LITERAL  shift, and go to state 18
    DECIMAL_LITERAL  shift, and go to state 19
    NULL_TOK         shift, and go to state 20
    TRUE_TOK         shift, and go to state 21
    FALSE_TOK        shift, and go to state 22
    LPAREN           shift, and go to state 25
    COUNT            shift, and go to state 26
    SUM              shift, and go to state 27
    AVG              shift, and go to state 28
    MIN              shift, and go to state 29
    MAX              shift, and go to state 30

    expression        go to state 48
    literal           go to state 34
    column_reference  go to state 35
    function_call     go to state 36


State 26

   95 function_call: COUNT • LPAREN MULTIPLY RPAREN
   96              | COUNT • LPAREN expression RPAREN

    LPAREN  shift, and go to state 49


State 27

   97 function_call: SUM • LPAREN expression RPAREN

    LPAREN  shift, and go to state 50


State 28

   98 function_call: AVG • LPAREN expression RPAREN

    LPAREN  shift, and go to state 51


State 29

   99 function_call: MIN • LPAREN expression RPAREN

    LPAREN  shift, and go to state 52


State 30

  100 function_call: MAX • LPAREN expression RPAREN

    LPAREN  shift, and go to state 53


State 31

   10 select_statement: SELECT select_column_list • from_clause where_clause
   11                 | SELECT select_column_list • from_clause

    FROM  shift, and go to state 54

    from_clause  go to state 55


State 32

   15 select_column_list: column_list •
   16 column_list: column_list • COMMA expression

    COMMA  shift, and go to state 56

    $default  reduce using rule 15 (select_column_list)


State 33

   17 column_list: expression •
   68 expression: expression • PLUS expression
   69           | expression • MINUS expression
   70           | expression • MULTIPLY expression
   71           | expression • DIVIDE expression
   72           | expression • MODULO expression

    PLUS      shift, and go to state 57
    MINUS     shift, and go to state 58
    MULTIPLY  shift, and go to state 59
    DIVIDE    shift, and go to state 60
    MODULO    shift, and go to state 61

    $default  reduce using rule 17 (column_list)


State 34

   65 expression: literal •

    $default  reduce using rule 65 (expression)


State 35

   66 expression: column_reference •

    $default  reduce using rule 66 (expression)


State 36

   67 expression: function_call •

    $default  reduce using rule 67 (expression)


State 37

   34 insert_statement: INSERT INTO • IDENTIFIER LPAREN column_list RPAREN VALUES LPAREN value_list RPAREN
   35                 | INSERT INTO • IDENTIFIER VALUES LPAREN value_list RPAREN

    IDENTIFIER  shift, and go to state 62


State 38

   38 update_statement: UPDATE IDENTIFIER • SET update_column_list where_clause

    SET  shift, and go to state 63


State 39

   41 delete_statement: DELETE FROM • IDENTIFIER where_clause

    IDENTIFIER  shift, and go to state 64


State 40

   42 create_table_statement: CREATE TABLE • IDENTIFIER LPAREN column_definition_list RPAREN

    IDENTIFIER  shift, and go to state 65


State 41

   64 drop_table_statement: DROP TABLE • IDENTIFIER

    IDENTIFIER  shift, and go to state 66


State 42

    0 $accept: program $end •

    $default  accept


State 43

    2 statement_list: statement_list statement • SEMICOLON

    SEMICOLON  shift, and go to state 67


State 44

    3 statement_list: statement SEMICOLON •

    $default  reduce using rule 3 (statement_list)


State 45

   93 function_call: IDENTIFIER LPAREN • RPAREN
   94              | IDENTIFIER LPAREN • value_list RPAREN
